# librevdep

./: Makefile  README.md  TODO.md  config.mk  meson.build  meson.options
.github/workflows/: build.yml
include/: Makefile  librevdep.h
man/: .gitignore  Makefile  meson.build
pkg-config/: .gitignore  Makefile  librevdep.pc.in
src/: Makefile  elf.cpp  elf_cache.cpp  meson.build  pkg.cpp  revdep_engine.cpp  revdep_format.cpp  revdep_parallel.cpp  utility.cpp
